[package]
name = "horde"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7"}
# Use `cargo run --features bevy/dynamic` instead
# bevy = { version = "0.7", features = ["dynamic"] }
rand = "0.8.5"
